# ember-engine

./: .gitignore  CMakeLists.txt  README.md
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
cmd/: build.sh  run.sh
product/: c-app  config.toml  config.yaml  ember-engine
product/dep/parser/: libtoml_parser.dylib  toml_parser.h
product/lib/: ember.h
product/res/shader/: base-quad.frag  base-quad.vert  base-text.frag  base-text.vert
src/: common.h  ember.h  main.c
src/ember-std/: list.h  map.h  string.h  util.h
src/ember-std/parser/: parser.c  parser.h
src/engine/: camera.c  camera.h  engine.c  engine.h  font.c  font.h  input.c  input.h  renderer.c  renderer.h  shader.c  shader.h  texture.c  texture.h  window.c  window.h
src/shrain-std/: map.c  map.h  string.h  util.h
src/shrain-std/parser/: parser.c  parser.h
